--- a/sprint4/Kode/Foundation/css/style.css
+++ b/sprint4/Kode/Foundation/css/style.css
@@ -14,10 +14,12 @@ body {
     width: 100%;
     height: 100%;
     text-align: center;
+    cursor: pointer;
 }
 .menu-option {
     border: solid thin #444;
     max-width: 30em;
+    cursor: pointer;
 }
 .menuHeader {
     width: 100%;
