--- a/sprint4/Kode/Foundation/css/style.css
+++ b/sprint4/Kode/Foundation/css/style.css
@@ -3,6 +3,8 @@
     background-color: #f2f2f2;
     border-bottom: solid thin #222;
     margin-bottom: 20px;
+    position: fixed;
+    z-index: 10;
 }
 body {
     background-image: url("../img/skoleveien.jpg");
@@ -18,8 +20,9 @@ body {
 }
 .menu-option {
     border: solid thin #444;
-    max-width: 30em;
     cursor: pointer;
+    margin-top: 100px;
+    background-color: white;
 }
 .menuHeader {
     width: 100%;
