--- a/sprint4/Kode/Foundation/css/style.css
+++ b/sprint4/Kode/Foundation/css/style.css
@@ -23,6 +23,11 @@ body {
     cursor: pointer;
     margin-top: 100px;
     background-color: white;
+    text-align: center;
+}
+
+.menu-option img {
+    max-width: 300px;
 }
 .menuHeader {
     width: 100%;
