--- a/sprint4/Kode/Foundation/css/style.css
+++ b/sprint4/Kode/Foundation/css/style.css
@@ -24,7 +24,13 @@ body {
     height: 100%;
     text-align: center;
     cursor: pointer;
-     transition: transform 0.5s;
+    /*transition: transform 0.5s;*/
+    transition: all 0.5s ease-in-out 0s;
+    -webkit-transition: all 0.5s ease-in-out 0s;
+    -moz-transition: all 0.5s ease-in-out 0s;
+    -o-transition: all 0.5s ease-in-out 0s;
+    
+
 
 }
 
@@ -32,6 +38,7 @@ body {
     transform: scale(1.1,1.1);
     -ms-transform: scale(1.1,1.1); /* IE 9 */
     -webkit-transform: scale(1.1,1.1); /* Chrome, Safari, Opera */
+    opacity: 0.7;
 }
 
 .menu-option {
