--- a/sprint4/Kode/Foundation/css/style.css
+++ b/sprint4/Kode/Foundation/css/style.css
@@ -1,3 +1,4 @@
+/*---------Headerområde!!---------*/
 #mainHeader {
     width: 100%;
     background-color: #f2f2f2;
@@ -12,6 +13,36 @@
     margin-bottom: 10px;
     cursor: pointer;
 }
+.menuHeader {
+    width: 100%;
+    height: 25px;
+    top: 25px;
+    position: relative;
+}
+/*---------Headerområde SLUTT!!---------*/
+
+/*---------Hovedområde!!---------*/
+
+    /*----------Hovedmeny!!-----------*/
+.menu-option {
+    border: solid thin #444;
+    cursor: pointer;
+    margin-top: 100px;
+    background-color: white;
+    text-align: center;
+}
+
+.menu-option img {
+    max-width: 300px;
+}
+
+#mainMenu{
+    margin-bottom: 20px;
+}
+
+    /*----------Hovedmeny SLUTT!!-----------*/
+
+
 
 body {
     background-image: url("../img/skoleveien.jpg");
@@ -29,9 +60,6 @@ body {
     -webkit-transition: all 0.5s ease-in-out 0s;
     -moz-transition: all 0.5s ease-in-out 0s;
     -o-transition: all 0.5s ease-in-out 0s;
-    
-
-
 }
 
 .align-center:hover{
@@ -40,29 +68,8 @@ body {
     -webkit-transform: scale(1.1,1.1); /* Chrome, Safari, Opera */
     opacity: 0.7;
 }
+/*---------Hovedområde SLUTT!!---------*/
 
-.menu-option {
-    border: solid thin #444;
-    cursor: pointer;
-    margin-top: 100px;
-    background-color: white;
-    text-align: center;
-}
-
-.menu-option img {
-    max-width: 300px;
-}
-
-#mainMenu{
-    margin-bottom: 20px;
-}
-
-.menuHeader {
-    width: 100%;
-    height: 25px;
-    top: 25px;
-    position: relative;
-}
 ul {
     list-style: none;
     display: inline-block;
