--- a/sprint4/Kode/Foundation/css/style.css
+++ b/sprint4/Kode/Foundation/css/style.css
@@ -7,8 +7,8 @@
     position: fixed;
     z-index: 10;
 }
-#siteLogo{
-    width: 250px;
+#siteLogo {
+    width: 200px;
     margin-left: -50px;
     margin-bottom: 10px;
     cursor: pointer;
@@ -25,7 +25,7 @@
 
     /*----------Hovedmeny!!-----------*/
 .menu-option {
-/*    border: solid thin #444;
+/*  border: solid thin #444;
     background-color: white;*/
     text-align: center;
     margin-top: 100px;
@@ -59,6 +59,7 @@
 body {
     background-image: url("../img/skoleveien.jpg");
     height: 2000px;
+    
 }
 .align-center{
     margin-left: auto;
@@ -80,6 +81,40 @@ body {
     opacity: 0.7;
 }
 /*---------Hovedområde SLUTT!!---------*/
+
+/*---------Footer!!-----------*/
+#footer{
+    width: 100%;
+    bottom: 0;
+    height: 100px;
+    background-color: #858585;
+    position: absolute;
+}
+
+#socialLinks{
+    float: right;    
+}
+#socialLinks img{
+    float: right;
+    width: 60px;
+    margin: 5px;
+    margin-top: 20px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out 0s;
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    -moz-transition: all 0.3s ease-in-out 0s;
+    -o-transition: all 0.3s ease-in-out 0s;    
+}
+
+#socialLinks img:hover{
+    transform: scale(1.1,1.1);
+    -ms-transform: scale(1.1,1.1); /* IE 9 */
+    -webkit-transform: scale(1.1,1.1); /* Chrome, Safari, Opera */
+    opacity: 0.7;
+}
+
+/*---------Footer SLUTT!!-----------*/
+
 
 ul {
     list-style: none;
