--- a/sprint4/Kode/Foundation/css/style.css
+++ b/sprint4/Kode/Foundation/css/style.css
@@ -9,7 +9,7 @@
 }
 #siteLogo {
     width: 200px;
-    margin-left: -50px;
+    /*margin-left: -50px;*/
     margin-bottom: 10px;
     cursor: pointer;
 }
