--- a/sprint4/Kode/Foundation/css/style.css
+++ b/sprint4/Kode/Foundation/css/style.css
@@ -91,9 +91,32 @@ body {
     position: absolute;
 }
 
-#socialLinks{
-    float: right;    
+#footerLogo img{
+    width: 200px;
+    margin: 15px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out 0s;
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    -moz-transition: all 0.3s ease-in-out 0s;
+    -o-transition: all 0.3s ease-in-out 0s;    
 }
+#footerLogo img:hover{
+    transform: scale(1.1,1.1);
+    -ms-transform: scale(1.1,1.1); /* IE 9 */
+    -webkit-transform: scale(1.1,1.1); /* Chrome, Safari, Opera */
+    opacity: 0.7;
+}
+
+#footerMid{
+    margin-top: 40px;
+}
+#footerMid li a{
+    color: white;
+}
+#footerMid li a:hover{
+    color: rgb(200,200,200);
+}
+
 #socialLinks img{
     float: right;
     width: 60px;
