--- a/sprint4/Kode/Foundation/css/style.css
+++ b/sprint4/Kode/Foundation/css/style.css
@@ -59,8 +59,8 @@
 body {
     background-image: url("../img/skoleveien.jpg");
     height: 2000px;
-    
 }
+
 .align-center{
     margin-left: auto;
     margin-right: auto;
@@ -85,8 +85,9 @@ body {
 /*---------Footer!!-----------*/
 #footer{
     width: 100%;
+    margin-top: 400px;
     bottom: 0;
-    height: 100px;
+    height: auto;
     background-color: #858585;
     position: absolute;
 }
