--- a/sprint4/Kode/Foundation/css/style.css
+++ b/sprint4/Kode/Foundation/css/style.css
@@ -92,6 +92,10 @@ body {
     position: absolute;
 }
 
+.kanals {
+    display: none;
+}
+
 #footerLogo img{
     width: 200px;
     margin: 15px;
@@ -99,7 +103,7 @@ body {
     transition: all 0.3s ease-in-out 0s;
     -webkit-transition: all 0.3s ease-in-out 0s;
     -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;    
+    -o-transition: all 0.3s ease-in-out 0s;
 }
 #footerLogo img:hover{
     transform: scale(1.1,1.1);
@@ -126,7 +130,7 @@ body {
     transition: all 0.3s ease-in-out 0s;
     -webkit-transition: all 0.3s ease-in-out 0s;
     -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;    
+    -o-transition: all 0.3s ease-in-out 0s;
 }
 
 #socialLinks img:hover{
