--- a/sprint4/Kode/Foundation/css/style.css
+++ b/sprint4/Kode/Foundation/css/style.css
@@ -58,7 +58,7 @@
 
 body {
     background-image: url("../img/skoleveien.jpg");
-    height: 2000px;
+
 }
 
 .align-center{
@@ -81,15 +81,17 @@ body {
     opacity: 0.7;
 }
 /*---------Hovedområde SLUTT!!---------*/
+.fag img {
+    max-width: 300px;
+}
+
 
 /*---------Footer!!-----------*/
 #footer{
     width: 100%;
-    margin-top: 400px;
-    bottom: 0;
-    height: auto;
     background-color: #858585;
-    position: absolute;
+    height: 7em;
+    margin-top: 50px;
 }
 
 #footerLogo img{
