--- a/sprint4/Kode/Foundation/css/introStyle.css
+++ b/sprint4/Kode/Foundation/css/introStyle.css
@@ -23,7 +23,7 @@ body {
 #adultSection img {
     -webkit-transform: rotate(40deg);
     margin-top: 10em;
-    transition: 1.1s all ease-in-out 0s;
+    transition: .2s all ease-in-out 0s;
 }
 
 #adultSection img:hover {
