Endringer i RLE siden
- lagt til id på religions bildene
- endret style.css -> lagt til id #align_center

--- a/sprint4/Kode/Foundation/Barn/css/style.css
+++ b/sprint4/Kode/Foundation/Barn/css/style.css
@@ -58,8 +58,17 @@
 
 body {
     background-image: url("../img/skoleveien.jpg");
-
 }
+
+/*----------Gjelder kun på religion bildene på RLE siden-----------*/
+
+#align_center{
+    margin: 15px;
+    margin-bottom: 15px;
+}
+
+/*----------SLUTT!!-----------*/
+
 
 .align-center{
     margin-left: auto;
