--- a/sprint4/Kode/Foundation/Barn/css/style.css
+++ b/sprint4/Kode/Foundation/Barn/css/style.css
@@ -100,6 +100,8 @@ body {
     background-color: #858585;
     height: 7em;
     margin-top: 50px;
+    position: absolute;
+    bottom: 0;
 }
 
 #footerLogo img{
@@ -109,7 +111,7 @@ body {
     transition: all 0.3s ease-in-out 0s;
     -webkit-transition: all 0.3s ease-in-out 0s;
     -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;    
+    -o-transition: all 0.3s ease-in-out 0s;
 }
 #footerLogo img:hover{
     transform: scale(1.1,1.1);
@@ -136,7 +138,7 @@ body {
     transition: all 0.3s ease-in-out 0s;
     -webkit-transition: all 0.3s ease-in-out 0s;
     -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;    
+    -o-transition: all 0.3s ease-in-out 0s;
 }
 
 #socialLinks img:hover{
