endringer i barn forside og css

--- a/sprint4/Kode/Foundation/Barn/css/style.css
+++ b/sprint4/Kode/Foundation/Barn/css/style.css
@@ -88,10 +88,12 @@ body {
     -webkit-transform: scale(1.1,1.1); /* Chrome, Safari, Opera */
     opacity: 0.7;
 }
-/*---------Hovedområde SLUTT!!---------*/
+
 .fag img {
     max-width: 300px;
 }
+/*---------Hovedområde SLUTT!!---------*/
+
 
 
 /*---------Footer!!-----------*/
@@ -170,5 +172,9 @@ ul li {
 
 /*HIDE ELEMENTS*/
 .kanalS{
-    display: none;
+    /*display: none;*/
+}
+
+.barnehage{
+    /*display: none;*/
 }
