gjort endringer på barneseiden

--- a/sprint4/Kode/Foundation/Barn/css/forsideStyle.css
+++ b/sprint4/Kode/Foundation/Barn/css/forsideStyle.css
@@ -54,20 +54,10 @@
 
     /*----------Hovedmeny SLUTT!!-----------*/
 
-
-
 body {
-    background-image: url("../img/skoleveien.jpg");
+    /*background-image: url("../img/skoleveien.jpg");*/
+    height: auto;
 }
-
-/*----------Gjelder kun på religion bildene på RLE siden-----------*/
-
-#align_center{
-    margin-bottom: 15px;
-}
-
-/*----------SLUTT!!-----------*/
-
 
 .align-center{
     margin-left: auto;
@@ -89,9 +79,6 @@ body {
     opacity: 0.7;
 }
 
-.fag img {
-    max-width: 300px;
-}
 /*---------Hovedområde SLUTT!!---------*/
 
 
@@ -100,9 +87,9 @@ body {
 #footer{
     width: 100%;
     background-color: #858585;
-    height: 7em;
+    height: auto;
     margin-top: 50px;
-    position: absolute;
+    /*position: absolute;*/
     bottom: 0;
 }
 
@@ -176,5 +163,5 @@ ul li {
 }
 
 .barnehage{
-    display: none;
+    /*display: none;*/
 }
