--- a/sprint4/Kode/Foundation/Barn/css/style.css
+++ b/sprint4/Kode/Foundation/Barn/css/style.css
@@ -59,7 +59,7 @@
 
 body {
     background-image: url("../img/skoleveien.jpg");
-    height: 100%;
+    min-height: 100%;
 }
 
 
@@ -71,7 +71,6 @@ body {
 }
 
 /*----------SLUTT!!-----------*/
-
 
 
 .align-center{
@@ -101,13 +100,15 @@ body {
 
 
 
+
+
+
 /*---------Footer!!-----------*/
 #footer{
     width: 100%;
     background-color: #858585;
     height: auto;
     margin-top: 50px;
-
 }
 
 
