--- a/sprint4/Kode/Foundation/Barn/css/forsideStyle.css
+++ b/sprint4/Kode/Foundation/Barn/css/forsideStyle.css
@@ -47,7 +47,6 @@
     opacity: 0.7;
 }
 
-
 #mainMenu{
     margin-bottom: 20px;
 }
@@ -63,10 +62,7 @@ body {
 }
 
 .align-center{
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    height: 100%;
+    margin-bottom: 15px;
     text-align: center;
     cursor: pointer;
     transition: all 0.3s ease-in-out 0s;
@@ -159,12 +155,10 @@ ul li {
     display: inline-block;
 }
 
-
 /*HIDE ELEMENTS*/
 .kanalS{
     display: none;
 }
-
 .barnehage{
     display: none;
 }
