--- a/sprint4/salabytest/app/views/users/new.html.erb
+++ b/sprint4/salabytest/app/views/users/new.html.erb
@@ -1,5 +1,25 @@
-<h1>New user</h1>
+<% provide(:title, 'Sign up') %>
+<h1>Sign up</h1>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user) do |f| %>
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name %>
 
-<%= link_to 'Back', users_path %>
+        <%= f.label :last_name %>
+        <%= f.text_field :last_name %>
+
+        <%= f.label :username %>
+        <%= f.text_field :username %>
+
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+
+        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.password_field :password_confirmation %>
+
+        <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
