satt animasjon til raskere på barnforsede

--- a/sprint4/Kode/Foundation/Barn/css/forsideStyle.css
+++ b/sprint4/Kode/Foundation/Barn/css/forsideStyle.css
@@ -34,10 +34,10 @@
 .menu-option img {
     max-width: 300px;
     cursor: pointer;
-    transition: all 0.3s ease-in-out 0s;
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.15s ease-in-out 0s;
+    -webkit-transition: all 0.15s ease-in-out 0s;
+    -moz-transition: all 0.15s ease-in-out 0s;
+    -o-transition: all 0.15s ease-in-out 0s;
 }
 
 .menu-option img:hover{
@@ -69,10 +69,10 @@ body {
     margin-bottom: 15px;
     text-align: center;
     cursor: pointer;
-    transition: all 0.3s ease-in-out 0s;
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.15s ease-in-out 0s;
+    -webkit-transition: all 0.15s ease-in-out 0s;
+    -moz-transition: all 0.15s ease-in-out 0s;
+    -o-transition: all 0.15s ease-in-out 0s;
 }
 
 .align-center:hover{
@@ -100,10 +100,10 @@ body {
     width: 200px;
     margin: 15px;
     cursor: pointer;
-    transition: all 0.3s ease-in-out 0s;
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.15s ease-in-out 0s;
+    -webkit-transition: all 0.15s ease-in-out 0s;
+    -moz-transition: all 0.15s ease-in-out 0s;
+    -o-transition: all 0.15s ease-in-out 0s;
 }
 #footerLogo img:hover{
     transform: scale(1.1,1.1);
@@ -127,10 +127,10 @@ body {
     margin: 5px;
     margin-top: 20px;
     cursor: pointer;
-    transition: all 0.3s ease-in-out 0s;
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.15s ease-in-out 0s;
+    -webkit-transition: all 0.15s ease-in-out 0s;
+    -moz-transition: all 0.15s ease-in-out 0s;
+    -o-transition: all 0.15.s ease-in-out 0s;
 }
 
 #socialLinks img:hover{
