--- a/sprint4/salabytest/app/views/users/show.html.erb
+++ b/sprint4/salabytest/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 <p id="notice"><%= notice %></p>
 
+<% if logged_in? %>
+    <p>Velkommen, <%= current_user.username%></p>
+    <%end%>
+
 <p>
   <strong>First name:</strong>
   <%= @user.first_name %>
