--- a/sprint4/Kode/Foundation/Voksen/css/styleVoksen.css
+++ b/sprint4/Kode/Foundation/Voksen/css/styleVoksen.css
@@ -9,7 +9,7 @@ body {
     background-color: transparent;
 }
  #wrapper {
-     padding-top: 10em;
+     padding-top: 5em;
      min-height: 100%;
  }
 
@@ -28,10 +28,8 @@ body {
     position: fixed;
     z-index: 10;
 }
-
-
-
 /*HEADER SLUTT*/
+
 #siteLogo {
     width: 200px;
     /*margin-left: -50px;*/
@@ -52,9 +50,21 @@ body {
 /*---------PROMOOMRÅDE START---------*/
 #promoBanner {
     width: 100%;
-    height: 400px;
-    background-color: rgba(200,50,20,0.5);
+    height: 350px;
+    /*background-color: rgba(200,50,20,0.5);*/
 }
+#promobannerTextBox{
+    width: 300px;
+    height: 300px;
+    padding: 20px;
+}
+#promoBanner *{
+    float: left;
+}
+#promoBanner img{
+    margin: 20px;
+}
+
 /*---------PROMOOMRÅDE SLUTT---------*/
 /*---------ARTICLEOMRÅDE START---------*/
 
@@ -84,8 +94,6 @@ body {
 /*---------ARTICLEOMRÅDE SLUTT---------*/
 
 /*----------Hovedmeny SLUTT!!-----------*/
-
-
 
 
 
