--- a/sprint4/Kode/Foundation/Voksen/css/styleKompetanse.css
+++ b/sprint4/Kode/Foundation/Voksen/css/styleKompetanse.css
@@ -1,9 +1,15 @@
 
+#wrapper {
+    min-width: 80%;
+}
 
+
+#footer {
+    margin-top:10%;
+}
 /*********************************************************************************************************/
 /*STYLE FOR KOMPETANSE SIDEN*/
 #innholdWrapper {
-    margin-bottom: 5em;
     width: 100%;
     height: 300px;
 }
@@ -61,10 +67,12 @@
 /***************************LISTE ELEMENTER*******************************************/
 
 
-ul {
-
+.accordion-navigation ul li {
+    display: block;
 }
 
-.accordion-navigation ul li {
-    display: inline;
+.accordion-navigation ul li:first-letter {
+
+    text-transform: capitalize;
+    
 }
