--- a/sprint4/Kode/Foundation/Barn/css/style.css
+++ b/sprint4/Kode/Foundation/Barn/css/style.css
@@ -180,4 +180,34 @@ body {
 
 .top-bar {
     height: 52px;
+    background-color: #f2f2f2;
+    border-bottom: solid thin #222;
+
 }
+
+.top-bar-section ul{
+margin-top: 0px;
+
+}
+
+
+.top-bar-section ul li a{
+color: black;
+background-color: #f2f2f2 !important;
+}
+
+.top-bar-section ul li a:hover{
+background-color: grey !important;
+}
+
+.top-bar.expanded .title-area {
+ background-color: #f2f2f2;
+}
+
+
+.top-bar-section li:not(.has-form) a:not(.button) {
+
+line-height: 51px;
+
+}
+
