--- a/sprint4/Kode/Foundation/Voksen/css/styleVoksen.css
+++ b/sprint4/Kode/Foundation/Voksen/css/styleVoksen.css
@@ -48,15 +48,16 @@ body {
 }
 /*---------Headerområde SLUTT---------*/
 /*---------PROMOOMRÅDE START---------*/
-#promoBanner {
+#promoBanner{
     width: 100%;
     height: 350px;
     /*background-color: rgba(200,50,20,0.5);*/
 }
 #promobannerTextBox{
     width: 300px;
-    height: 300px;
+    height: 350px;
     padding: 20px;
+    overflow: hidden;
 }
 #promoBanner *{
     float: left;
@@ -71,7 +72,7 @@ body {
 #articleOmrade {
     width: 100%;
     height: auto;
-    padding-top: 2em;
+    padding-top: 1em;
 }
 
 #articleOmrade article {
