--- a/sprint4/Kode/Foundation/Barn/css/forsideStyle.css
+++ b/sprint4/Kode/Foundation/Barn/css/forsideStyle.css
@@ -143,21 +143,6 @@ body {
 /*---------Footer SLUTT!!-----------*/
 
 
-ul {
-    list-style: none;
-    display: inline-block;
-}
-li a {
-    display: block;
-    margin-left: 10px;
-    color: #888;
-}
-li a:hover {
-    color: #007095;
-}
-ul li {
-    display: inline-block;
-}
 
 /*HIDE ELEMENTS*/
 .kanalS{
@@ -171,4 +156,48 @@ ul li {
 }
 #skoleveienMenu{
     display: none;
+}
+
+/*MENY*/
+.top-bar{
+    height: 52px;
+    background-color: #f2f2f2;
+    border-bottom: solid thin #dcdcdc;
+
+}
+
+.title-area {
+    height: 52px;
+    border-bottom: solid thin #dcdcdc;
+
+}
+
+.top-bar-section ul{
+margin-top: 0px;
+
+}
+
+
+.top-bar-section ul li a{
+color: black;
+background-color: #f2f2f2 !important;
+}
+
+.top-bar-section ul li a:hover{
+background-color: grey !important;
+}
+
+.top-bar.expanded .title-area {
+ background-color: #f2f2f2;
+}
+
+
+.top-bar .toggle-topbar.menu-icon a, .toggle-topbar.menu-icon {
+
+color: grey;
+
+}
+
+.top-bar .toggle-topbar.menu-icon a span::after {
+box-shadow: 0 0px 0 1px grey, 0 7px 0 1px grey, 0 14px 0 1px grey;
 }
