--- a/sprint4/Kode/Foundation/Barn/css/forsideStyle.css
+++ b/sprint4/Kode/Foundation/Barn/css/forsideStyle.css
@@ -99,24 +99,19 @@ body {
 #footerLogo img{
     width: 200px;
     margin: 15px;
-    cursor: pointer;
-    transition: all 0.15s ease-in-out 0s;
-    -webkit-transition: all 0.15s ease-in-out 0s;
-    -moz-transition: all 0.15s ease-in-out 0s;
-    -o-transition: all 0.15s ease-in-out 0s;
-}
-#footerLogo img:hover{
-    transform: scale(1.1,1.1);
-    -ms-transform: scale(1.1,1.1); /* IE 9 */
-    -webkit-transform: scale(1.1,1.1); /* Chrome, Safari, Opera */
-    opacity: 0.7;
+   
 }
 
 #footerMid{
     margin-top: 40px;
 }
+#footerMid li{
+    float: left;
+    margin: 5px;
+    list-style: none;
+}
 #footerMid li a{
-    color: white;
+    color: rgb(250,250,250);
 }
 #footerMid li a:hover{
     color: rgb(200,200,200);
