--- a/sprint4/salabytest/app/views/users/show.html.erb
+++ b/sprint4/salabytest/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%=render 'shared/page_header'%>
+
 <% if logged_in? %>
     <p>Velkommen, <%= current_user.username%></p>
     <%end%>
