--- a/sprint4/Kode/Foundation/Voksen/css/styleVoksen.css
+++ b/sprint4/Kode/Foundation/Voksen/css/styleVoksen.css
@@ -1,7 +1,7 @@
 
 /***********************************CONSTRUCTORS**************************************/
 body {
-    /*background-image: url("../img/skoleveien.jpg");*/
+    /*background-image: url("../img/naturfag_akvarium.jpg");*/
     background-color: #ccc;
 }
 
