--- a/sprint4/Kode/Foundation/Voksen/css/styleVoksen.css
+++ b/sprint4/Kode/Foundation/Voksen/css/styleVoksen.css
@@ -1,4 +1,4 @@
-
+@media only screen and (min-width: 64.063em) { 
 /***********************************CONSTRUCTORS**************************************/
 body {
     /*background-image: url("../img/naturfag_akvarium.jpg");*/
@@ -99,78 +99,9 @@ body {
 
 
 
-/*---------Footer!!-----------*/
-#footer{
-    width: 100%;
-    background-color: #858585;
-    height: auto;
-    bottom: 0;
-    margin-top: 50px;
-}
 
 
-#footerLogo img{
-    width: 200px;
-    margin: 15px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out 0s;
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
-}
-#footerLogo img:hover{
-    transform: scale(1.1,1.1);
-    -ms-transform: scale(1.1,1.1); /* IE 9 */
-    -webkit-transform: scale(1.1,1.1); /* Chrome, Safari, Opera */
-    opacity: 0.7;
-}
 
-#footerMid{
-    margin-top: 40px;
-}
-#footerMid li a{
-    color: white;
-}
-#footerMid li a:hover{
-    color: rgb(200,200,200);
-}
-
-#socialLinks img{
-    width: 60px;
-    margin: 5px;
-    margin-top: 20px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out 0s;
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
-}
-
-#socialLinks img:hover{
-    transform: scale(1.1,1.1);
-    -ms-transform: scale(1.1,1.1); /* IE 9 */
-    -webkit-transform: scale(1.1,1.1); /* Chrome, Safari, Opera */
-    opacity: 0.7;
-}
-
-/*---------Footer SLUTT!!-----------*/
-
-
-ul {
-    list-style: none;
-    display: inline-block;
-}
-li a {
-    display: block;
-    margin-left: 10px;
-    color: #888;
-}
-li a:hover {
-    color: #007095;
-}
-ul li {
-    display: inline-block;
-}
 
 
 /*HIDE ELEMENTS*/
@@ -178,4 +109,14 @@ ul li {
     display: none;
 }
 
+}
+@media only screen and (max-width: 73.063em) {
 
+body{
+    background-color: red;
+}
+    
+#wrapper {
+    margin-top: 3em;
+}
+}
