--- a/sprint4/Kode/Foundation/css/introStyle.css
+++ b/sprint4/Kode/Foundation/css/introStyle.css
@@ -81,6 +81,11 @@ body {
 /***************MOBIL*********************/
 @media only screen and (max-width: 40em) {
 
+    
+    body {
+        overflow: hidden;
+    }
+    
     #childSection {
     position: absolute;
     min-width: 100%;
@@ -99,7 +104,7 @@ body {
 /*****************ADULT SECTION MOBIL**************/
 #adultSection {
     max-height: 50%;
-    max-width: 120%;
+    min-width: 130%;
     -webkit-transform: rotate(0deg);
     position: absolute;
     top: -5em;
