--- a/sprint5/Kode/Foundation/Barn/css/style.css
+++ b/sprint5/Kode/Foundation/Barn/css/style.css
@@ -55,6 +55,15 @@
 #mainMenu {
     margin-bottom: 20px;
 }
+
+
+#backArrow{
+    position: absolute;
+    margin-top: 10px;
+    width: 50px;
+    right: 20px;
+}
+
 /*----------Hovedmeny SLUTT!!-----------*/
 
 body {
@@ -102,7 +111,7 @@ body {
     width: 100%;
     background-color: #858585;
     height: auto;
-    margin-top: 50px;
+    margin-top: -30px;
 }
 #footerLogo img {
     width: 200px;
@@ -247,6 +256,13 @@ body {
     .cd-top {
         right: 20px;
         bottom: 20px;
+    }
+    
+    #backArrow{
+        position: absolute;
+        margin-top: 10px;
+        width: 80px;
+        right: 35px;
     }
 }
 @media only screen and (min-width: 1024px) {
