--- a/sprint5/Kode/Foundation/Barn/css/forsideStyle.css
+++ b/sprint5/Kode/Foundation/Barn/css/forsideStyle.css
@@ -1,8 +1,10 @@
+
+
 /*Gjemmer elementer som ikke skal vises før de skal :P*/
 /*HIDE ELEMENTS*/
 .kanalS, #barnehageButtonMobil, #skoleveienButtonMobil,
 #kanalSButtonMobil, #MFLButtonMobil, .barnehage,
-.MFL, #skoleveienMenu{
+.MFL, #skoleveienMenu, .skolestart, .forste, .andre, .morsmaal{
     display: none;
 }
 .kanalS,.mfl,.menu, .barnehage {
