--- a/sprint5/Kode/Foundation/Barn/css/forsideStyle.css
+++ b/sprint5/Kode/Foundation/Barn/css/forsideStyle.css
@@ -140,7 +140,7 @@ body {
     transition: all 0.15s ease-in-out 0s;
     -webkit-transition: all 0.15s ease-in-out 0s;
     -moz-transition: all 0.15s ease-in-out 0s;
-    -o-transition: all 0.15.s ease-in-out 0s;
+    -o-transition: all 0.15s ease-in-out 0s;
 }
 
 #socialLinks img:hover{
