--- a/sprint5/Kode/Foundation/css/footer.css
+++ b/sprint5/Kode/Foundation/css/footer.css
@@ -69,3 +69,10 @@
 }
     
 /*---------Footer SLUTT!!-----------*/
+@media only screen and (max-width: 40.063em) {
+    #footer {
+        text-align: center;
+    }
+    
+    
+}
