--- a/sprint5/Kode/Foundation/Barn/css/forsideStyle.css
+++ b/sprint5/Kode/Foundation/Barn/css/forsideStyle.css
@@ -75,6 +75,8 @@ body {
     background: url("../img/skoleveien.jpg") no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    overflow:scroll;
+    overflow-x: hidden;
 }
 
 #wrapper{
