--- a/sprint5/Kode/Foundation/Barn/css/style.css
+++ b/sprint5/Kode/Foundation/Barn/css/style.css
@@ -16,7 +16,6 @@
 }
 
 
-
 .menuHeader {
     width: 100%;
     height: 25px;
@@ -69,7 +68,7 @@
 body {
     background: url("../img/hinduisme/hinduismebak.jpg") no-repeat;
     background-attachment: fixed;
-
+    background-color: red;
     background-size: cover;
 }
 /*----------Gjelder kun på religion bildene på RLE siden-----------*/
