Full HTML struktur på plass

--- a/sprint4/salabytest/app/views/static_pages/info/omSkoleveien.html.erb
+++ b/sprint4/salabytest/app/views/static_pages/info/omSkoleveien.html.erb
@@ -65,7 +65,7 @@
       <nav class="breadcrumbs">
         <a href="informasjon">Informasjon</a>
         <a href="omSalaby">Om salaby</a>
-        <a class="current" href="omSkoleveien">Om Skoleveien 1-2 Trinn</a>
+        <a class="current" href="omSkoleveien">Om Skolevein 1-2 Trinn</a>
         <a class="unavailable" href="omByparken">Om Byparken 3-5 Trinn</a>
         <a class="unavailable" href="omKanalS">Om KanalS 5-7 Trinn</a>
       </nav>
@@ -78,7 +78,7 @@
         <ul class="side-nav">
           <li><a href="omSalaby">Om Salaby</a>
           </li>
-          <li><a class="active" href="omSkoleveien">Om Skoleveien 1-2 Trinn</a>
+          <li><a class="active" href="omSkolevein">Om Skoleveien 1-2 Trinn</a>
           </li>
           <li><a href="omByparken">Om Byparken 3-5 Trinn</a>
           </li>
