adresse til bildefiler på forsiden oppdatert

--- a/sprint4/salabytest/app/assets/stylesheets/introStyle.css
+++ b/sprint4/salabytest/app/assets/stylesheets/introStyle.css
@@ -5,7 +5,7 @@
 
     /*CONSTRUCTORS*/
 body {
-    background-image: url(/assets/skoleveien.jpg);
+    background-image: url(/assets/index/skoleveien.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
