--- a/sprint4/salabytest/app/views/static_pages/index.html.erb
+++ b/sprint4/salabytest/app/views/static_pages/index.html.erb
@@ -22,7 +22,7 @@
     </div>
     <div class="small-12 columns">
       <a href="Voksen/voksenForside">
-        <img src="img/adultSection.jpg"></a>
+        <img src="assets/index/adultSection.jpg"></a>
     </div>
   </div>
 </div>
@@ -48,21 +48,14 @@
 <div id="personPos">
   <div class="row">
     <div class="large-12 small-12 columns">
-      <img src="img/Emre_1.png">
+      <img src="assets/index/Emre_1.png">
     </div>
   </div>
 </div>
 
 
-
-<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="../js/loginBtnShow.js"></script>
-<script src="js/vendor/jquery.js"></script>
-<script src="js/foundation.min.js"></script>
 <script src="js/menuHeadScript.js"></script>
-<script>
-    $(document).foundation();
-</script>
 </body>
 
 </html>
